# embcache

./: .gitignore  BENCHMARK_RESULTS.md  README.md  pyproject.toml
.claude/: settings.local.json
benchmarks/: BENCHMARK_RESULTS.md  _utils.py  bench_embedding.py  bench_gds.py  bench_gpu_cache.py  bench_hit_rate.py  bench_kv.py  calibrate.py
embcache/: __init__.py  _config.py  _cpu_cache.py  _exact_index.py  _faiss_index.py  _fingerprint.py  _gcs_backend.py  _gds_backend.py  _get_or_fetch.py  _get_or_fetch_kv.py  _gpu_cache.py  _keys.py  _llm_client.py  _metrics.py  _normalize.py  _prefetch.py  _warm.py
tests/: test_cpu_cache.py  test_failure_paths.py  test_fingerprint.py  test_get_or_fetch.py  test_get_or_fetch_kv.py  test_gpu_cache.py  test_keys.py  test_normalize.py
