[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "embcache"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "torch",
    "faiss-cpu",
    "google-cloud-storage",
    "google-api-core",
    "prometheus-client",
    "httpx",
]

[project.optional-dependencies]
gpu = ["faiss-gpu"]
bench = ["psutil"]
dev = [
    "pytest",
    "pytest-asyncio",
    "hypothesis",
    "psutil",
]

[tool.setuptools.packages.find]
include = ["embcache*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
